--- a/src/styles/GameBoard.module.css
+++ b/src/styles/GameBoard.module.css
@@ -1,6 +1,25 @@
 .gameboard {
     width: 100%;
-    height: 87vh;
+    height: 70vh;
     position: relative;
-    display: inline-block;
+    padding: 5px 20px;
+}
+
+.startButton {
+    width: 300px;
+    height: 80px;
+    background-color: rgb(255, 81, 0);
+    font-family: 'Poppins', sans-serif;
+    color: rgb(19, 18, 18);
+    font-size: 30px;
+    font-weight: 800;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    transition: .1s;
+}
+
+.startButton:active {
+    background-color: rgb(255, 30, 0);
+    box-shadow: 0 5px 5px black;
 }
