--- a/src/styles/SingleDot.module.css
+++ b/src/styles/SingleDot.module.css
@@ -5,5 +5,11 @@
     background-color: orangered;
     cursor: pointer;
     transition: .1s all;
+    margin: 5px;
+    position: absolute;
+    transition: .1s all;
+}
 
+.singleDot:active {
+    transform: scale(0.9);
 }
