--- a/src/styles/SingleDot.module.css
+++ b/src/styles/SingleDot.module.css
@@ -2,7 +2,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: orangered;
+    background-color: rgb(95, 86, 223);
     cursor: pointer;
     transition: .1s all;
     margin: 5px;
