--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ h1 {
   /* font-family: 'Bungee Spice', sans-serif; */
   font-size: 64px;
   text-align: center;
-  margin: 20px;
-  color: rgb(196, 0, 0);
+  margin: 0;
+  color: rgb(255, 72, 0);
   text-shadow: 2px 4px 5px black;
   letter-spacing: 2px;
 }
